[gd_scene load_steps=4 format=2]

[ext_resource path="res://StyleBoxFlatDark.tres" type="StyleBox" id=1]
[ext_resource path="res://Popup.gd" type="Script" id=2]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=3]

[node name="Popup" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_right = -50.0
theme = ExtResource( 3 )
custom_styles/bg = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 914.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 904.0
margin_bottom = 23.0

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 84.0
margin_bottom = 23.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 4
text = "Exit"

[node name="ThreadPosts" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 904.0
margin_bottom = 27.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
